Fix RWD layout problem

--- a/chanceCard/main.css
+++ b/chanceCard/main.css
@@ -14,8 +14,61 @@
         align-items: center;
         min-height: 100vh;
         flex-wrap: wrap;
-        background: #000;
+        background: #111;
         overflow: hidden;
+        color: #fff;
+    }
+
+    #newRecordBox {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        left: 50%;
+        top: 50%;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 1049;
+        transform: translate(-50%, -50%) scale(1);
+        transition: 0.3s all ease-in-out;
+    }
+
+    #newRecordBox .newRecord {
+        position: absolute;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        left: 50%;
+        top: 34%;
+        padding: 20px;
+        width: 400px;
+        height: 150px;
+        background: #000;
+        color: #eee;
+        border: 1px solid #eee;
+        border-radius: 5px;
+        z-index: 1099;
+        text-align: center;
+        transform: translate(-50%, -50%);
+        transition: 0.3s all ease-in-out;
+    }
+
+    #newRecordBox .title {
+        font-size: 24px;
+        font-weight: 600;
+    }
+
+    #newRecordBox input {
+        padding: 0 20px;
+        height: 40px;
+        border: none;
+        border-radius: 5px;
+    }
+
+    #newRecordBox.hide {
+        transform: translate(-50%, -50%) scale(0);
     }
 
     #resultBox {
@@ -59,24 +112,95 @@
         color: red;
     }
 
-    #restartBtn {
-        width: 100px;
+    #resultBox #resultInfo #restartBtn {
+        position: absolute;
+        left: 50%;
+        top: -65px;
+        width: 300px;
         padding: 5px;
-        border: 1px solid #fff;
-        border-radius: 6px;
-        background: rgba(0, 0, 0, 0.5);
+        border: none;
+        background: none;
         color: #fff;
+        font-family: 'Dancing Script', cursive;
+        font-size: 40px;
+        font-weight: 800;
+        letter-spacing: 10px;
         text-align: center;
+        transform: translateX(-50%);
         cursor: pointer;
+        opacity: 1;
         transition: 0.1s all ease-in;
+        animation: breath 1s ease-in-out infinite;
     }
 
-    #restartBtn:hover {
-        background: rgba(0, 0, 0, 1);
+    #resultBox #resultInfo #rankInfo,
+    #resultBox #resultInfo #rankInfo2 {
+        position: absolute;
+        left: 50%;
+        bottom: -65px;
+        width: 300px;
+        padding: 5px;
+        border: none;
+        background: none;
+        color: #fff;
+        font-family: helvetica;
+        font-size: 28px;
+        font-weight: 800;
+        letter-spacing: 10px;
+        text-align: center;
+        transform: translateX(-50%) scale(1);
+    }
+
+    #resultBox #resultInfo #rankInfo2 {
+        opacity: 1;
+        animation: flash 1.5s ease-in-out;
+        animation-fill-mode: forwards;
+        color: #fff;
+    }
+
+    #resultBox #resultInfo #rankInfo.hide {
+        display: none;
+    }
+
+    #resultBox #resultInfo #rankInfo2.hide {
+        display: none;
+    }
+
+    @keyframes breath {
+        0% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+
+    @keyframes flash {
+        from {
+            transform: translateX(-50%) scale(1);
+            opacity: 1;
+        }
+        to {
+            transform: translateX(-50%) scale(2);
+            opacity: 0;
+        }
     }
 
     #resultBox.hide {
         transform: translate(-50%, -50%) scale(0);
+    }
+
+
+    #ranking {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 6vh;
+        background: #000;
     }
 
     #row01,
@@ -92,27 +216,13 @@
 
     .card {
         position: relative;
-        width: 125px;
+        width: 20vw;
         height: 100%;
         text-align: center;
         perspective: 1000px;
         color: #fff;
         cursor: pointer;
         filter: drop-shadow(0px 0px 5px rgba(46, 255, 245, 1));
-    }
-
-    @media (max-width: 640px) {
-
-        #row01,
-        #row02,
-        #row03 {
-            height: 30vh;
-        }
-
-        .card {
-            width: 80px;
-            height: 110px;
-        }
     }
 
     .card input {
@@ -134,9 +244,10 @@
         align-items: center;
         width: 100%;
         height: 100%;
-        background: url('https://i-1-lanrentuku.52tup.com/2020/11/20/8386c4de-f1c9-4046-92ec-23b22db99171.jpg?imageView2/2/w/320/');
-        background-size: cover;
+        background-size: contain;
         background-position: center;
+        background-image: url('https://i-1-lanrentuku.52tup.com/2020/11/20/8386c4de-f1c9-4046-92ec-23b22db99171.jpg?imageView2/2/w/320/');
+        background-repeat: no-repeat;
         transform: rotateY(0deg);
         backface-visibility: hidden;
         transition: 0.3s all ease-in;
